<resources>
    <string name="app_name">ECV Crew</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="in">In</string>
    <string name="out">Out</string>
    <string name="check_in_image">check_in_image</string>
    <string name="out_image">out_image</string>
    <string name="checkout">Checkout</string>
    <string name="checkin">checkin</string>
    <string name="meetings">Meetings</string>
    <string name="alloted_task">Alloted Task</string>
    <string name="calander">Calander</string>
    <string name="log_out">Log-out</string>
    <string name="user_profile">User Profile</string>
    <string name="other_ways">other ways</string>
    <string name="setup_profile">Setup Profile</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_d_o_b">Enter D.O.B</string>
    <string name="enter_home_address">Enter home address</string>
    <string name="app_or_web_developer">App or Web Developer</string>
    <string name="calender">Calender</string>
    <string name="meeting_time">Meeting Time:</string>
    <string name="time">Time</string>
    <string name="meetlogo">meetlogo</string>
    <string name="logout">logout</string>
    <string name="edit_profile">edit profile</string>
    <string name="attendance">Attendance</string>
    <string name="task_completed">Task Completed</string>
    <string name="welcome">Welcome</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="log_in">Log-In</string>
    <string name="new_user">New user?</string>
    <string name="create_a_account">Create a account</string>
    <string name="enter_your_e_mail_id">Enter your E-mail Id</string>
    <string name="create_account">create account</string>
    <string name="set_a_username">Set a username</string>
    <string name="set_a_password">Set a password</string>
    <string name="message_task">Message/Task</string>
    <string name="enter_task">Enter Task</string>
    <string name="send">Send</string>
    <string name="select_date">Select Date</string>
    <string name="enter_team_name">Enter team name</string>
    <string name="forward">forward</string>
    <string name="team_lead_name">Team Lead Name</string>
    <string name="meeting_link">Meeting Link</string>
    <string name="meeting_time_">Meeting Time</string>
    <string name="crewlogo">crewlogo</string>
    <string name="ecv_logo">ecv logo</string>
    <string name="attendance_sheet">Attendance</string>
    <string name="arrow_send">arrow_send</string>
    <string name="search_employees">Search employees</string>
    <string name="forget_password">Forget Password?</string>
    <string name="compose">compose</string>
</resources>