<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".TeamNameActivity">
    <include layout="@layout/custom_toolbar"
        android:id="@+id/team_tool_name"/>

    <EditText
        android:id="@+id/editGroupName"
        android:layout_width="0dp"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/field_background"
        android:ems="10"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:hint="@string/enter_team_name"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team_tool_name" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:focusable="true"
        android:rotationY="180"
        app:backgroundTint="@color/DarkBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editGroupName"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/abc_vector_test"
        android:contentDescription="@string/forward" />


    <EditText
        android:id="@+id/teamLead"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:background="@drawable/field_background"
        android:hint="@string/team_lead_name"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButton2"
        app:layout_constraintEnd_toEndOf="@+id/editGroupName"
        app:layout_constraintStart_toStartOf="@+id/editGroupName"
        app:layout_constraintTop_toBottomOf="@+id/editGroupName"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/meetingLinkTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/field_background"
        android:ems="10"
        android:hint="@string/meeting_link"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/teamLead"
        app:layout_constraintStart_toStartOf="@+id/teamLead"
        app:layout_constraintTop_toBottomOf="@+id/teamLead" />

    <EditText
        android:id="@+id/meetingTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/field_background"
        android:ems="10"
        android:hint="@string/meeting_time_"
        android:paddingStart="20dp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:paddingEnd="20dp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/teamLead"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/teamLead"
        app:layout_constraintTop_toBottomOf="@+id/meetingLinkTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>